// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOverlineWidth renders 0 1`] = `
Array [
  .c0 {
  text-overline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders function 1`] = `
Array [
  .c0 {
  text-overline-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  text-overline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders negative number 1`] = `
Array [
  .c0 {
  text-overline-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-overline-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-overline-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-overline-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-overline-width: July;
}

@media May {
  .c0 {
    text-overline-width: August;
  }
}

@media April {
  .c0 {
    text-overline-width: September;
  }
}

@media January {
  .c0 {
    text-overline-width: November;
  }
}

@media April {
  .c0 {
    text-overline-width: August;
  }
}

@media June {
  .c0 {
    text-overline-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: July;
}

@media May {
  .c0 {
    text-overline-width: August;
  }
}

@media April {
  .c0 {
    text-overline-width: September;
  }
}

@media January {
  .c0 {
    text-overline-width: November;
  }
}

@media April {
  .c0 {
    text-overline-width: August;
  }
}

@media June {
  .c0 {
    text-overline-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-width: November;
  }
}

@media April {
  .c0 {
    text-overline-width: January;
  }
}

@media January {
  .c0 {
    text-overline-width: December;
  }
}

@media April {
  .c0 {
    text-overline-width: April;
  }
}

@media June {
  .c0 {
    text-overline-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-width: November;
  }
}

@media April {
  .c0 {
    text-overline-width: January;
  }
}

@media January {
  .c0 {
    text-overline-width: December;
  }
}

@media April {
  .c0 {
    text-overline-width: April;
  }
}

@media June {
  .c0 {
    text-overline-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-overline-width: July;
  }
}

@media April {
  .c0 {
    text-overline-width: August;
  }
}

@media January {
  .c0 {
    text-overline-width: September;
  }
}

@media April {
  .c0 {
    text-overline-width: November;
  }
}

@media June {
  .c0 {
    text-overline-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-overline-width: July;
  }
}

@media April {
  .c0 {
    text-overline-width: August;
  }
}

@media January {
  .c0 {
    text-overline-width: September;
  }
}

@media April {
  .c0 {
    text-overline-width: November;
  }
}

@media June {
  .c0 {
    text-overline-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-width: January;
  }
}

@media April {
  .c0 {
    text-overline-width: December;
  }
}

@media January {
  .c0 {
    text-overline-width: April;
  }
}

@media April {
  .c0 {
    text-overline-width: May;
  }
}

@media June {
  .c0 {
    text-overline-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-width: January;
  }
}

@media April {
  .c0 {
    text-overline-width: December;
  }
}

@media January {
  .c0 {
    text-overline-width: April;
  }
}

@media April {
  .c0 {
    text-overline-width: May;
  }
}

@media June {
  .c0 {
    text-overline-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders postitive number 1`] = `
Array [
  .c0 {
  text-overline-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders string 1`] = `
Array [
  .c0 {
  text-overline-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textOverlineWidth renders valid theme path 1`] = `
Array [
  .c0 {
  text-overline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
